# escaped

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.workers  README.md  base.Dockerfile  docker-compose.yml  find-orgs.sh  install-prereq-ubuntu.sh  pyproject.toml
escaped/: __init__.py  config.py  submit_jobs.py  utils.py
escaped/workers/: __init__.py  analyzer.py  crawler.py
gitsens/: __init__.py  config.py  submit_jobs.py  utils.py
gitsens/workers/: analyzer.py  crawler.py
notebook/: analysis.ipynb  orgs_data.json
scripts/: analyze_orgs.py  find-orgs.sh
src/api/: main.py  models.py  publisher.py
src/workers/: main.py
