[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "escaped"  
version = "0.1.0"  
description = "Git-sensitive application."  #  
authors = [
    {name = "Yahor", email = "hypocycloid@duck.com"}  
]
dependencies = [
    "redis",
    "rq"
]


[tool.setuptools]
packages = ["escaped"] 

[tool.setuptools.package-dir]
"escaped" = "escaped"  

[tool.setuptools.exclude-package-data]
"escaped" = ["*.pyc"]  

[tool.setuptools.package-data]  
"escaped" = ["*.txt", "*.csv"] 


[tool.mypy]
python_version = "3.12" 
strict = true

[tool.coverage.run]
branch = true
source = ["escaped"] 

[tool.coverage.report]
fail_under = 80  # Minimum coverage percentage to pass.
show_missing = true